--- a/src/components/DashboardTable/style.css
+++ b/src/components/DashboardTable/style.css
@@ -1,15 +1,38 @@
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,700;1,200&display=swap");
+.active::after {
+   position: absolute;
+   content: '';
+   width: 28px;
+   height: 28px;
+   border-radius: 50%;
+   background-color: #000000B2;
+   margin-left: -10px;
+}
 
+.active::before {
+   position: absolute;
+   z-index: 1;
+   content: '';
+   width: 100%;
+   height: 4px;
+   background-color: #000000B2;
+   border-radius: 12px;
+}
+
+/*@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,700;1,200&display=swap");
+
+/*
 #table {
    height: 70vh;
    min-width: 100%;
-   min-height: 95%;
+   min-height: calc(95% - 8px);
    overflow: scroll;
+   margin-top: 8px;
 }
 
 .container {
    display: table;
    position: relative;
+
 }
 
 .table-header {
