--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
   box-sizing: border-box;
   font-family: 'Mulish', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  sans-serif; 
+}
+
+input:-webkit-autofill{
+  -webkit-text-fill-color: black !important;
 }
 
 body {
